<?xml version="1.0" encoding="UTF-8"?>

<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>co.worklytics.psoxy</groupId>
    <artifactId>java</artifactId>
    <version>${revision}</version>
    <packaging>pom</packaging>

    <properties>
        <revision>0.6.6</revision>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <dependency.lombok.version>1.18.42</dependency.lombok.version>
        <dependency.dagger.version>2.40.5</dependency.dagger.version>
        <dependency.jackson.version>2.18.3</dependency.jackson.version>
        <dependency.apache-commons-lang3.version>3.19.0</dependency.apache-commons-lang3.version>
        <dependency.apache-commons-csv.version>1.14.1</dependency.apache-commons-csv.version>
        <dependency.guava.version>33.4.7-jre</dependency.guava.version>
        <dependency.commons-io.version>2.18.0</dependency.commons-io.version>
        <dependency.commons-net.version>3.11.1</dependency.commons-net.version>
        <dependency.apache-httpcore.version>5.3.1</dependency.apache-httpcore.version>
        <dependency.google-cloud-bom.version>26.71.0</dependency.google-cloud-bom.version>
        <dependency.google-http-client.version>1.45.1</dependency.google-http-client.version>
        <dependency.google-auth-library-oauth2-http.version>1.32.0</dependency.google-auth-library-oauth2-http.version>
        <dependency.junit-jupiter.version>5.11.4</dependency.junit-jupiter.version>
        <dependency.mockito-junit-jupiter.version>5.18.0</dependency.mockito-junit-jupiter.version>
        <dependency.json-path.version>2.9.0</dependency.json-path.version>
        <dependency.opennlp.version>2.5.9</dependency.opennlp.version>
        <skipOpenNlpModelDownload>false</skipOpenNlpModelDownload>
        <!-- langchain4j-jlama has no non-beta release on Central for the 1.x ChatModel API; 0.36.x is pre-1.0 API. -->
        <dependency.langchain4j.version>1.15.0</dependency.langchain4j.version>
        <dependency.langchain4j-jlama.version>1.15.0-beta25</dependency.langchain4j-jlama.version>
        <dependency.bouncycastle.version>1.82</dependency.bouncycastle.version>
        <plugin.surefire.version>3.5.3</plugin.surefire.version>
        <maven.deploy.skip>true</maven.deploy.skip>
    </properties>

    <dependencyManagement>
        <dependencies>
            <!-- https://mvnrepository.com/artifact/org.junit/junit-bom -->
            <dependency>
                <groupId>org.junit</groupId>
                <artifactId>junit-bom</artifactId>
                <version>${dependency.junit-jupiter.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <modules>
        <module>gateway-core</module>
        <module>core</module>
        <module>impl</module>
    </modules>

    <distributionManagement>
        <repository>
            <id>github</id>
            <name>GitHub Packages</name>
            <url>https://maven.pkg.github.com/Worklytics/psoxy</url>
        </repository>
    </distributionManagement>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.13.0</version>
                <configuration>
                    <source>21</source>
                    <target>21</target>
                    <annotationProcessorPaths>
                        <path>
                            <groupId>com.google.dagger</groupId>
                            <artifactId>dagger-compiler</artifactId>
                            <version>${dependency.dagger.version}</version>
                        </path>
                        <path>
                            <groupId>org.projectlombok</groupId>
                            <artifactId>lombok</artifactId>
                            <version>${dependency.lombok.version}</version>
                        </path>
                    </annotationProcessorPaths>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.codehaus.mojo</groupId>
                <artifactId>flatten-maven-plugin</artifactId>
                <version>1.1.0</version>
                <configuration>
                    <outputDirectory>${project.build.directory}</outputDirectory>
                </configuration>
                <executions>
                    <!-- enable flattening -->
                    <execution>
                        <id>flatten</id>
                        <phase>process-resources</phase>
                        <goals>
                            <goal>flatten</goal>
                        </goals>
                    </execution>
                    <!-- ensure proper cleanup -->
                    <execution>
                        <id>flatten.clean</id>
                        <phase>clean</phase>
                        <goals>
                            <goal>clean</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
        </plugins>
    </build>

    <profiles>
        <profile>
            <id>gen-metadata-integration</id>
            <build>
                <pluginManagement>
                    <plugins>
                        <!-- -pl core -am still builds gateway-core; allow -Dtest filters that only match psoxy-core -->
                        <plugin>
                            <groupId>org.apache.maven.plugins</groupId>
                            <artifactId>maven-surefire-plugin</artifactId>
                            <configuration>
                                <failIfNoSpecifiedTests>false</failIfNoSpecifiedTests>
                            </configuration>
                        </plugin>
                    </plugins>
                </pluginManagement>
            </build>
        </profile>
    </profiles>

</project>
